# ToDo-Collab

./: .gitignore  Makefile  README.md  coverage.xml  docker-compose.dev.yml  docker-compose.yml  integration_coverage.xml  pyproject.toml  report_integration_tests.xml  report_service_tests.xml  requirements.txt  scylla.yml  sonar-project.properties  tailwind.config.js
.github/workflows/: ci.yaml
client_flutter/: analysis_options.yaml  l10n.yaml  pubspec.yaml  untranslated_messages.json
client_flutter/android/app/: build.gradle
client_flutter/ios/Runner.xcodeproj/: project.pbxproj
client_flutter/lib/: main.dart  weather_bloc_observer.dart
client_flutter/lib/l10n/: app_de.arb  app_en.arb
client_flutter/macos/Runner.xcodeproj/: project.pbxproj
client_flutter/test/: widget_test.dart
client_flutter/web/: index.html
infra/build_artifacts/: Dockerfile  docker-entrypoint.sh
src/: app.py
src/config/: env.py  scylla.py  settings.py  templates.py
src/endpoints/team/: router.py
src/endpoints/todo/: router.py
src/handler/: auth.py  websocket.py
src/logic/: collection.py  user.py
src/models/: models.py
src/presentation/static/: styles.css
src/presentation/templates/: chat.html  collection.html  collection.html.jinja2  collections.html  collections.html.jinja2  layout.html.jinja2  login.html.jinja2  nav.html.jinja2  register.html.jinja2  template.html.jinja2
tests/integration/: test_collection.py  test_logic.py  test_member.py  test_todo.py  test_user.py
tests/service/auth/: login_stage.yaml  test_login.tavern.yaml
(+61 files in other folders)
